Installed pathfinding and patches
Installed pathfinding and added the goblin AI.

Patched enemies moving into eachother.

--- a/DuCr.html
+++ b/DuCr.html
@@ -11,8 +11,12 @@
 </head>
 <body id="board" scroll='no'>
     <h1 class='Title' id='Title'>DuCr</h1><br>
+    <h3 class='Subtitle' id='Subtitle'>A web game by Yohan Berg!</h3>
+    <p class='Subtitle' style='font-size:18px;margin-bottom:12px;text-shadow:2px 2px #161616'>2017 - 2018</p>
     <center><button class='input' id="MenuNew">New</button><br>
     <button class='input' id="MenuContinue">Continue</button></center>
+    <script type="text/javascript" src="bower_components/pathfinding/pathfinding-browser.min.js"></script>
     <script type="text/javascript" src="DuCr.js"></script>
+    <p class='Subtitle' style="font-size:16px;font-family: Georgia;text-shadow:2px 2px #161616;position:fixed;bottom:0;">Contact me: yohan520@gmail.com</p>
 </body>
 </html>
