--- a/DuCr.html
+++ b/DuCr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>DuCr</title>
+    <title id='tabTitle'>DuCr</title>
     <link rel="icon" href="resources/icon.png">
     <link href='https://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet'>
     <link rel="stylesheet" href="DuCr.css" type="text/css" />
