Added cookies and file saving. Refactored name selection.

--- a/DuCr.html
+++ b/DuCr.html
@@ -14,7 +14,8 @@
     <h3 class='Subtitle' id='Subtitle'>A web game by Yohan Berg!</h3>
     <p class='Subtitle' style='font-size:18px;margin-bottom:12px;text-shadow:2px 2px #161616'>2017 - 2018</p>
     <center><button class='input' id="MenuNew">New</button><br>
-    <button class='input' id="MenuContinue">Continue</button></center>
+    <button class='input' id="MenuContinue">Load from Code</button><br>
+    <button class='input' id="MenuLoadFromFile">Load from File</button></center>
     <script type="text/javascript" src="bower_components/pathfinding/pathfinding-browser.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="DuCr.js"></script>
